[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smle"
version = "0.1.6"
description = "Simple Machine Learning Enviroment - a tiny utilities framework for ML/DL."
readme = "README.md"
dependencies = [
  "PyYAML>=6.0.3",
  "wandb>=0.23.0",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
]

[project.optional-dependencies]
torch = [
  "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
smle = "smle.cli:main"